Add delete endpoint.
